@@ -41,6 +41,17 @@
     -->
 
     <listitem>
+      <para>2022-09-20</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Adappt instructions depending on 
+          host setup of /dev/shm when creating virtual filesystems
+          for chroot.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2022-09-15</para>
       <itemizedlist>
         <listitem>
