@@ -95,7 +95,8 @@
 
     <para>Before making a backup, unmount the virtual file systems:</para>
 
-<screen role="nodump"><userinput>umount $LFS/dev/pts
+<screen role="nodump"><userinput>[ mountpoint -q $LFS/dev/shm ] &amp;&amp; umount $LFS/dev/shm
+umount $LFS/dev/pts
 umount $LFS/{sys,proc,run,dev}</userinput></screen>
 
     <para>
