@@ -89,8 +89,15 @@ mount -vt tmpfs tmpfs $LFS/run</userinput></screen>
       The /run tmpfs was mounted above so in this case only a
       directory needs to be created.</para>
 
+      <para>In other cases <filename>/dev/shm</filename> is a mountpoint 
+      for a tmpfs. In that case the mount of /dev above will only create
+      /dev/shm in the chroot environment as a directory. In this situation
+      we explicitly mount a tmpfs,</para>
+
 <screen><userinput>if [ -h $LFS/dev/shm ]; then
   mkdir -pv $LFS/$(readlink $LFS/dev/shm)
+else
+  mount -t tmpfs -o nosuid,nodev tmpfs $LFS/dev/shm
 fi</userinput></screen>
 
   </sect2>
