@@ -129,7 +129,12 @@ mounttype dev/pts devpts devpts -o gid=5,mode=620
 mounttype proc    proc   proc
 mounttype sys     sysfs  sysfs
 mounttype run     tmpfs  run
-mkdir $LFS/run/shm
+if [ -h $LFS/dev/shm ]; then
+  mkdir -pv $LFS/$(readlink $LFS/dev/shm)
+else
+  mounttype dev/shm tmpfs tmpfs -o nosuid,nodev
+fi 
+
 #mountbind usr/src
 #mountbind boot
 #mountbind home
